--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit
-pandas
-numpy==1.26.4
-scikit-learn==1.3.2
-matplotlib
-seaborn
-cloudpickle
+pandas==1.5.3
+numpy==1.23.5
+scikit-learn==1.2.2
+matplotlib==3.7.1
+seaborn==0.12.2
+cloudpickle==2.2.1
