--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 streamlit
-pandas==1.5.3
-numpy==1.23.5
+pandas>=2.0
+numpy>=2.1.0
 scikit-learn==1.2.2
 matplotlib==3.7.1
 seaborn==0.12.2
 cloudpickle==2.2.1
+
