--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 streamlit
 pandas>=2.0
 numpy>=2.1.0
-scikit-learn==1.2.2
-matplotlib==3.7.1
-seaborn==0.12.2
-cloudpickle==2.2.1
-
+scikit-learn>=1.3.0
+matplotlib
+seaborn
+cloudpickle
